Quorum/Library/Tests/TypeCheckerGenerated/Fail/RetAssignBoolObjIntObjField.quorum
class Main
    Boolean v
    action Main
        v:SetValue(Test())
    end

    action Test() returns Boolean
        Integer var
        var:SetValue(5)
        return var
    end
end